# adventofcode

2019/day1/src/: main.rs
2019/day2/src/: main.rs
2019/day3/src/: main.rs
2019/day4/src/: main.rs
2019/day5/src/: main.rs
2021/day15/: Cargo.toml
2021/day15/src/: main.rs
2022/day1p1/src/: input.rs  main.rs
2022/day2/src/: main.rs
2023/day1/src/: main.rs
2023/day10/: Cargo.toml
2023/day10/src/: main.rs
2023/day11/src/: main.rs
2023/day12/: Cargo.toml  custom
2023/day12/src/: main.rs
2023/day13/: custum
2023/day13/src/: main.rs
2023/day13_p2/: Cargo.toml  custom
2023/day13_p2/src/: main.rs
2023/day14/src/: main.rs
2023/day15/src/: main.rs
2023/day16/src/: main.rs
2023/day17/: Cargo.toml
2023/day17/src/: main.rs
2023/day18/: Cargo.toml
2023/day18/src/: main.rs  main_1.rs
2023/day18_p2/: Cargo.toml
2023/day18_p2/src/: main.rs
2023/day19/src/: main.rs
2023/day19_p2/: Cargo.toml
2023/day19_p2/src/: main.rs
2023/day2/src/: main.rs
2023/day20/: Cargo.toml
2023/day20/src/: main.rs
2023/day20_p2/: Cargo.toml
2023/day20_p2/src/: main.rs
2023/day21/src/: main copy.rs  main.rs
2023/day22/src/: main.rs
2023/day23/: Cargo.toml
2023/day23/src/: main.rs
2023/day24/: Cargo.toml  z3_training.py
2023/day24/src/: main.rs
2023/day25/src/: main.rs
2023/day3/src/: main.rs
2023/day4/src/: main.rs
2023/day5/src/: main.rs
2023/day6/src/: main.rs
2023/day8/: e
2024/day13/: day13.py  r.txt
2024/day6/: Cargo.toml  comment  exemple2
2024/day7/: day7.pl
2024/day8/: Cargo.toml
2025/: day3.py
(+18 files in other folders)
